[package]
name = "want"
version = "0.1.0" # remember to update html_root_url
description = "Detect when another Future wants a result."
keywords = ["futures", "channel"]
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT"
repository = "https://github.com/seanmonstar/want"
homepage = "https://github.com/seanmonstar/want"
documentation = "https://docs.rs/want"

[dependencies]
futures-core = "0.2"
log = "0.4"
try-lock = "0.1"

[dev-dependencies]
futures = "0.2"
