[package]
name = "want"
version = "0.2.0" # remember to update html_root_url
description = "Detect when another Future wants a result."
keywords = ["futures", "channel"]
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT"
repository = "https://github.com/seanmonstar/want"
homepage = "https://github.com/seanmonstar/want"
documentation = "https://docs.rs/want"
edition = "2018"

publish = false

[dependencies]
log = "0.4"
try-lock = "0.2"

[dev-dependencies]
tokio-executor = { git = "https://github.com/tokio-rs/tokio" }
tokio-sync = { git = "https://github.com/tokio-rs/tokio" }
